attached_assets/Pasted--Error-Cannot-find-module-C-Users-yashw-VS-Projects-scripts-create-env-js-at-Function-res-1746892469116.txt

Error: Cannot find module 'C:\Users\yashw\VS_Projects\scripts\create-env.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Function._load (node:internal/modules/cjs/loader:1055:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:170:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.14.0
PS C:\Users\yashw\VS_Projects> node scripts/create-env.js   
node:internal/modules/cjs/loader:1228
  throw err;
  ^

Error: Cannot find module 'C:\Users\yashw\VS_Projects\scripts\create-env.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Function._load (node:internal/modules/cjs/loader:1055:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:170:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.14.0
PS C:\Users\yashw\VS_Projects> npm run db:push
npm error Missing script: "db:push"
npm error
npm error To see a list of scripts, run:
npm error   npm run
npm error A complete log of this run can be found in: C:\Users\yashw\AppData\Local\npm-cache\_logs\2025-05-10T15_47_33_523Z-debug-0.log
PS C:\Users\yashw\VS_Projects> npm install

up to date, audited 30 packages in 786ms

5 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities
PS C:\Users\yashw\VS_Projects>  npm run db:push
npm error Missing script: "db:push"
npm error
npm error To see a list of scripts, run:
npm error   npm run
npm error A complete log of this run can be found in: C:\Users\yashw\AppData\Local\npm-cache\_logs\2025-05-10T15_48_17_092Z-debug-0.log
PS C:\Users\yashw\VS_Projects> npm run db:push
npm error Missing script: "db:push"
npm error
npm error To see a list of scripts, run:
npm error   npm run
npm error A complete log of this run can be found in: C:\Users\yashw\AppData\Local\npm-cache\_logs\2025-05-10T15_48_33_775Z-debug-0.log
PS C:\Users\yashw\VS_Projects> cd AI-Closet
PS C:\Users\yashw\VS_Projects\AI-Closet> npm install     
npm warn deprecated inflight@1.0.6: This module is not supported, and leaks memory. Do not use it. Check out lru-cache if you want a good and tested way to coalesce async requests by a key value, which is much more comprehensive and powerful.
npm warn deprecated npmlog@5.0.1: This package is no longer supported.
npm warn deprecated @esbuild-kit/esm-loader@2.6.5: Merged into tsx: https://tsx.is
npm warn deprecated @esbuild-kit/core-utils@3.3.2: Merged into tsx: https://tsx.is
npm warn deprecated rimraf@3.0.2: Rimraf versions prior to v4 are no longer supported
npm warn deprecated glob@7.2.3: Glob versions prior to v9 are no longer supported
npm warn deprecated are-we-there-yet@2.0.0: This package is no longer supported.
npm warn deprecated gauge@3.0.2: This package is no longer supported.

added 647 packages, and audited 648 packages in 15s

69 packages are looking for funding
  run `npm fund` for details

10 vulnerabilities (8 moderate, 2 high)

To address issues that do not require attention, run:
  npm audit fix

To address all issues (including breaking changes), run:
  npm audit fix --force

Run `npm audit` for details.
PS C:\Users\yashw\VS_Projects\AI-Closet> npm run db:push

> rest-express@1.0.0 db:push
> drizzle-kit push

No config path provided, using default 'drizzle.config.ts'
Reading config file 'C:\Users\yashw\VS_Projects\AI-Closet\drizzle.config.ts'
DATABASE_URL, ensure the database is provisioned
PS C:\Users\yashw\VS_Projects\AI-Closet> npm run db:push

> rest-express@1.0.0 db:push
> drizzle-kit push

No config path provided, using default 'drizzle.config.ts'
Reading config file 'C:\Users\yashw\VS_Projects\AI-Closet\drizzle.config.ts'
Using 'pg' driver for database querying
[✓] Pulling schema from database...
[✓] Changes applied
PS C:\Users\yashw\VS_Projects\AI-Closet>  node start-local.js
file:///C:/Users/yashw/VS_Projects/AI-Closet/start-local.js:8
const { execSync, spawn } = require('child_process');
                            ^

ReferenceError: require is not defined in ES module scope, you can use import instead
This file is being treated as an ES module because it has a '.js' file extension and 'C:\Users\yashw\VS_Projects\AI-Closet\package.json' contains "type": "module". To treat it as a CommonJS script, rename it to use the '.cjs' file extension.
    at file:///C:/Users/yashw/VS_Projects/AI-Closet/start-local.js:8:29
    at ModuleJob.run (node:internal/modules/esm/module_job:271:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:578:26)        
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.14.0
PS C:\Users\yashw\VS_Projects\AI-Closet> npm run dev

> rest-express@1.0.0 dev
> tsx server/index.ts

C:\Users\yashw\VS_Projects\AI-Closet\server\db.ts:1
import { Pool } from 'pg';
         ^

SyntaxError: The requested module 'pg' does not provide an export named 'Pool'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:180:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:263:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:578:26)        
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.14.0
PS C:\Users\yashw\VS_Projects\AI-Closet>    node scripts/check-database.js
>>
file:///C:/Users/yashw/VS_Projects/AI-Closet/scripts/check-database.js:15
require('dotenv').config();
^

ReferenceError: require is not defined in ES module scope, you can use import instead
This file is being treated as an ES module because it has a '.js' file extension and 'C:\Users\yashw\VS_Projects\AI-Closet\package.json' contains "type": "module". To treat it as a CommonJS script, rename it to use the '.cjs' file extension.
    at file:///C:/Users/yashw/VS_Projects/AI-Closet/scripts/check-database.js:15:1
    at ModuleJob.run (node:internal/modules/esm/module_job:271:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:578:26)        
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.14.0
PS C:\Users\yashw\VS_Projects\AI-Closet> node scripts/check-database.js   
>> 
file:///C:/Users/yashw/VS_Projects/AI-Closet/scripts/check-database.js:15
require('dotenv').config();
^

ReferenceError: require is not defined in ES module scope, you can use import instead
This file is being treated as an ES module because it has a '.js' file extension and 'C:\Users\yashw\VS_Projects\AI-Closet\package.json' contains "type": "module". To treat it as a CommonJS script, rename it to use the '.cjs' file extension.
    at file:///C:/Users/yashw/VS_Projects/AI-Closet/scripts/check-database.js:15:1
    at ModuleJob.run (node:internal/modules/esm/module_job:271:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:578:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.14.0